yearly reports update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main role="main">
         <section class="section">
             <div class="container">
-                <h1 class="has-text-centered has-text-white">FitzFishing Report</h1>
+                <h1 class="has-text-centered has-text-white main-title">FitzFishing Report</h1>
                 <hr class="home-line">
             </div>
         </section>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="button home-button mt-4 is-rounded">View Recent Reports</a>
+                <a href="recent_reports.html" class="button home-button mt-4 is-rounded">View Recent Reports</a>
             </div>
         </section>
         <section class="section">
@@ -128,7 +128,7 @@
                     labore
                     et dolore magna aliqua. Facilisis sed odio morbi quis. Sit amet luctus venenatis lectus magna.
                 </p>
-                <a href="#" class="button home-button mt-4 ml-4 is-rounded">View Yearly Reports</a>
+                <a href="yearly_reports.html" class="button home-button mt-4 ml-4 is-rounded">View Yearly Reports</a>
             </div>
         </section>
         <section class="hero is-fullheight overall-hero">
@@ -142,7 +142,7 @@
                     labore
                     et dolore magna aliqua. Facilisis sed odio morbi quis. Sit amet luctus venenatis lectus magna.
                 </p>
-                <a href="#" class="button home-button mt-4 ml-4 is-rounded">View Overall Statistics</a>
+                <a href="overall_stats.html" class="button home-button mt-4 ml-4 is-rounded">View Overall Statistics</a>
             </div>
         </section>
         <section class="hero is-fullheight about-hero mb-6">
@@ -162,7 +162,7 @@
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                                 labore et dolore magna aliqua. Non arcu risus quis varius quam quisque id diam.
                             </p>
-                            <a href="#" class="button home-button mt-4 is-rounded">Read More</a>
+                            <a href="about.html" class="button home-button mt-4 is-rounded">Read More</a>
                         </div>
                         <div class="column about-column">
                             <figure class="image about-img">
