--- a/yearly_reports.html
+++ b/yearly_reports.html
@@ -114,6 +114,9 @@
                                 <div class="column">
                                     <a class="quick-nav-years button mb-5" href="2021.html">2021</a>
                                 </div>
+                                <div class="column">
+                                    <a class="quick-nav-years button mb-5" href="2022.html">2022</a>
+                                </div>
                             </div>
                         </div>
                         <hr class="mb-5">
@@ -209,24 +212,85 @@
         </section>
         <section class="section">
             <div class="container">
-                <h2 class="has-text-white has-text-centered mb-4">2023 Projections</h2>
-                <div class="columns is-flex-wrap-wrap">
-                    <div class="column is-flex-direction-column">
-                        <p class="projection-title has-text-white ml-4">March - 80</p>
-                        <progress class="progress is-info px-4 is-large" value="0" max="100"></progress>
-                        <span class="progress-text progress-march has-text-black">0</span>
+                <h2 class="has-text-white has-text-centered mb-6">2023 Projections</h2>
+                <div class="columns">
+                    <div class="column">
+                        <div class="columns">
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Mar - 25/128</p>
+                                <progress class="progress is-success px-4 is-large" value="25" max="128"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Apr - 1/77</p>
+                                <progress class="progress is-success px-4 is-large" value="1" max="77"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">May - 0/81</p>
+                                <progress class="progress is-success px-4 is-large" value="0" max="81"></progress>
+                            </div>
+                        </div>
+                        <p class="projection-title has-text-white ml-4 mt-4">Spring - 26/286</p>
+                        <progress class="progress is-success px-4 mb-6 is-large season-bar" value="26" max="286"></progress>
                     </div>
-                    <div class="column is-flex-direction-column">
-                        <p class="projection-title has-text-white ml-4">April - 80</p>
-                        <progress class="progress is-info px-4 is-large" value="0" max="100"></progress>
-                        <span class="progress-text progress-april has-text-black">0</span>
-                    </div>
-                    <div class="column is-flex-direction-column">
-                        <p class="projection-title has-text-white ml-4">May - 80</p>
-                        <progress class="progress is-info px-4 is-large" value="0" max="100"></progress>
-                        <span class="progress-text progress-may has-text-black">0</span>
+                    <div class="column">
+                        <div class="columns">
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">June - 0/223</p>
+                                <progress class="progress is-success px-4 is-large" value="0" max="223"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">July - 0/323</p>
+                                <progress class="progress is-success px-4 is-large" value="0" max="323"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Aug - 0/227</p>
+                                <progress class="progress is-success px-4 is-large" value="0" max="227"></progress>
+                            </div>
+                        </div>
+                        <p class="projection-title has-text-white ml-4 mt-4">Summer - 0/772</p>
+                        <progress class="progress is-success px-4 is-large season-bar" value="0" max="772"></progress>
                     </div>
                 </div>
+                <div class="columns">
+                    <div class="column">
+                        <div class="columns">
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Sept - 0/140</p>
+                                <progress class="progress is-success px-4 is-large" value="0" max="140"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Oct - 0/257</p>
+                                <progress class="progress is-success px-4 is-large" value="0" max="257"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Nov - 0/102</p>
+                                <progress class="progress is-success px-4 is-large" value="0" max="102"></progress>
+                            </div>
+                        </div>
+                        <p class="projection-title has-text-white ml-4 mt-4">Fall - 0/499</p>
+                        <progress class="progress is-success px-4 is-large season-bar" value="0" max="499"></progress>
+                    </div>
+                    <div class="column">
+                        <div class="columns">
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Jan - 22/85</p>
+                                <progress class="progress is-success px-4 is-large" value="22" max="85"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Feb - 61/123</p>
+                                <progress class="progress is-success px-4 is-large" value="61" max="123"></progress>
+                            </div>
+                            <div class="column">
+                                <p class="projection-title has-text-white ml-4">Dec - 0/19</p>
+                                <progress class="progress is-success px-4 is-large" value="0" max="19"></progress>
+                            </div>
+                        </div>
+                        <p class="projection-title has-text-white ml-4 mt-4">Winter - 83/227</p>
+                        <progress class="progress is-success px-4 mb-6 is-large season-bar" value="83" max="227"></progress>
+                    </div>
+                </div>
+                <p class="projection-title has-text-white ml-4 mt-4">Year - 109/1785</p>
+                <progress class="progress is-success px-4 is-large" value="109" max="1785"></progress>
             </div>
         </section>
     </main>
