--- a/yearly_reports.html
+++ b/yearly_reports.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <a class="navbar-item" href="https://bulma.io">
+            <a class="navbar-item" href="index.html">
                 <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
             </a>
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
@@ -103,19 +103,19 @@
                         <div class="container is-fluid">
                             <div class="columns is-flex is-justify-content-center has-text-centered is-multiline">
                                 <div class="column">
-                                    <a class="quick-nav-years button mb-5" href="2018.html">2018</a>
+                                    <a class="quick-nav-years button mb-5" href="yearly_reports/2018.html">2018</a>
                                 </div>
                                 <div class="column">
-                                    <a class="quick-nav-years button mb-5" href="2019.html">2019</a>
+                                    <a class="quick-nav-years button mb-5" href="yearly_reports/2019.html">2019</a>
                                 </div>
                                 <div class="column">
-                                    <a class="quick-nav-years button mb-5" href="2020.html">2020</a>
+                                    <a class="quick-nav-years button mb-5" href="yearly_reports/2020.html">2020</a>
                                 </div>
                                 <div class="column">
-                                    <a class="quick-nav-years button mb-5" href="2021.html">2021</a>
+                                    <a class="quick-nav-years button mb-5" href="yearly_reports/2021.html">2021</a>
                                 </div>
                                 <div class="column">
-                                    <a class="quick-nav-years button mb-5" href="2022.html">2022</a>
+                                    <a class="quick-nav-years button mb-5" href="yearly_reports/2022.html">2022</a>
                                 </div>
                             </div>
                         </div>
@@ -193,19 +193,19 @@
                 <h2 class="has-text-white has-text-centered mb-4">Select Year</h2>
                 <div class="columns is-flex is-justify-content-center has-text-centered is-multiline">
                     <div class="column">
-                        <a class="years button mb-5" href="2018.html">2018</a>
+                        <a class="years button mb-5" href="yearly_reports/2018.html">2018</a>
                     </div>
                     <div class="column">
-                        <a class="years button mb-5" href="2019.html">2019</a>
+                        <a class="years button mb-5" href="yearly_reports/2019.html">2019</a>
                     </div>
                     <div class="column">
-                        <a class="years button mb-5" href="2020.html">2020</a>
+                        <a class="years button mb-5" href="yearly_reports/2020.html">2020</a>
                     </div>
                     <div class="column">
-                        <a class="years button mb-5" href="2021.html">2021</a>
+                        <a class="years button mb-5" href="yearly_reports/2021.html">2021</a>
                     </div>
                     <div class="column">
-                        <a class="years button mb-5" href="2022.html">2022</a>
+                        <a class="years button mb-5" href="yearly_reports/2022.html">2022</a>
                     </div>
                 </div>
             </div>
