--- a/yearly_reports/2022.html
+++ b/yearly_reports/2022.html
@@ -27,54 +27,42 @@
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-end">
                 <a class="navbar-item" href="../yearly_reports.html">Yearly Reports</a>
-                <a class="navbar-item" href="#locations_2018">Location Select</a>
+                <a class="navbar-item" href="#locations_2022">Location Select</a>
             </div>
         </div>
     </nav>
     <main role="main">
         <section class="section">
             <div class="container">
-                <h1 class="has-text-centered has-text-white">2018</h1>
-                <hr class="line_2018">
+                <h1 class="has-text-centered has-text-white">2022</h1>
+                <hr class="line_2022">
             </div>
         </section>
         <section class="section is-flex is-justify-content-center">
             <div class="best-catches-container">
                 <div class="bestCatches">
-                    <img src="../images/bestCatches/2018/20in_catfish.jpg"
-                        alt="20 inch Kaysville Ponds Channel Catfish">
+                    <img src="../images/bestCatches/2022/stansbury_bass.png"
+                        alt="Small Largemouth Bass caught at Stansbury Lake">
                 </div>
                 <div class="bestCatches">
-                    <img src="../images/bestCatches/2018/20in_cutt.jpg"
-                        alt="20 inch Strawberry Reservoir Cutthroat Trout">
+                    <img src="../images/bestCatches/2022/brood_rainbow.jpg"
+                        alt="20 inch brood stock Rainbow Trout">
                 </div>
                 <div class="bestCatches">
-                    <img src="../images/bestCatches/2018/21in_cutt.jpg"
-                        alt="21 inch Strawberry Reservoir Cutthroat Trout">
+                    <img src="../images/bestCatches/2022/20in_cutt.png"
+                        alt="20 inch Lost Creek Reservoir Cutthroat Trout">
                 </div>
                 <div class="bestCatches">
-                    <img src="../images/bestCatches/2018/21in_brown.jpg"
-                        alt="21 inch East Canyon Reservoir Brown Trout">
+                    <img src="../images/bestCatches/2022/ice_cutt.png"
+                        alt="24 inch 4 pound 8 ounce Strawberry Reservoir Cutthroat Trout">
                 </div>
                 <div class="bestCatches">
-                    <img src="../images/bestCatches/2018/22in_cutt.png"
-                        alt="22 inch Strawberry Reservoir Cutthroat Trout">
+                    <img src="../images/bestCatches/2022/24in_cutt.jpg"
+                        alt="24 inch 5 pound Strawberry Reservoir Cutthroat Trout">
                 </div>
                 <div class="bestCatches">
-                    <img src="../images/bestCatches/2018/lost_creek_cutt.jpg"
-                        alt="22 inch Lost Creek Reservoir Cutthroat Trout">
-                </div>
-                <div class="bestCatches">
-                    <img src="../images/bestCatches/2018/my_first_slot_buster.JPG"
-                        alt="22.25 inch Strawberry Reservoir Cutthroat Trout">
-                </div>
-                <div class="bestCatches">
-                    <img src="../images/bestCatches/2018/jasons_slot_buster.jpg"
-                        alt="22.5 inch Strawberry Reservoir Cutthroat Trout">
-                </div>
-                <div class="bestCatches">
-                    <img src="../images/bestCatches/2018/23in_cutt.JPG"
-                        alt="23 inch Strawberry Reservoir Cutthroat Trout">
+                    <img src="../images/bestCatches/2022/28in_cutt.jpg"
+                        alt="28 inch 8 pound 5 ounce Strawberry Reservoir Cutthroat Trout">
                 </div>
             </div>
         </section>
@@ -100,13 +88,13 @@
                             <tbody>
                                 <tr>
                                     <td>Adams</td>
-                                    <td>150</td>
-                                    <td>14.44%</td>
+                                    <td>1</td>
+                                    <td>0.06%</td>
                                 </tr>
                                 <tr>
-                                    <td>East Canyon</td>
-                                    <td>41</td>
-                                    <td>3.95%</td>
+                                    <td>Good Ski</td>
+                                    <td>46</td>
+                                    <td>2.62%</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -127,78 +115,53 @@
                             <tbody>
                                 <tr>
                                     <td>Bluegill</td>
-                                    <td>80</td>
-                                    <td>7.70%</td>
-                                </tr>
-                                <tr>
-                                    <td>Brook</td>
-                                    <td>1</td>
-                                    <td>0.10%</td>
-                                </tr>
-                                <tr>
-                                    <td>Brown</td>
-                                    <td>7</td>
-                                    <td>0.67%</td>
+                                    <td>69</td>
+                                    <td>3.94%</td>
                                 </tr>
                                 <tr>
                                     <td>Bullhead Catfish</td>
-                                    <td>8</td>
-                                    <td>0.77%</td>
+                                    <td>6</td>
+                                    <td>0.34%</td>
                                 </tr>
                                 <tr>
                                     <td>Carp</td>
                                     <td>1</td>
-                                    <td>0.10%</td>
+                                    <td>0.06%</td>
                                 </tr>
                                 <tr>
                                     <td>Channel Catfish</td>
                                     <td>5</td>
-                                    <td>0.48%</td>
+                                    <td>0.29%</td>
+                                </tr>
+                                <tr>
+                                    <td>Chub</td>
+                                    <td>8</td>
+                                    <td>0.46%</td>
                                 </tr>
                                 <tr>
                                     <td>Cutthroat</td>
-                                    <td>382</td>
-                                    <td>36.77%</td>
-                                </tr>
-                                <tr>
-                                    <td>Kokanee</td>
-                                    <td>12</td>
-                                    <td>1.15%</td>
+                                    <td>1318</td>
+                                    <td>75.19%</td>
                                 </tr>
                                 <tr>
                                     <td>Largemouth Bass</td>
-                                    <td>4</td>
-                                    <td>0.38%</td>
-                                </tr>
-                                <tr>
-                                    <td>Perch</td>
-                                    <td>4</td>
-                                    <td>0.38%</td>
+                                    <td>1</td>
+                                    <td>0.06%</td>
                                 </tr>
                                 <tr>
                                     <td>Rainbow</td>
-                                    <td>530</td>
-                                    <td>51.01%</td>
-                                </tr>
-                                <tr>
-                                    <td>Smallmouth Bass</td>
-                                    <td>1</td>
-                                    <td>0.10%</td>
+                                    <td>339</td>
+                                    <td>19.34%</td>
                                 </tr>
                                 <tr>
                                     <td>Splake</td>
                                     <td>1</td>
-                                    <td>0.10%</td>
+                                    <td>0.06%</td>
                                 </tr>
                                 <tr>
                                     <td>Tiger Trout</td>
-                                    <td>2</td>
-                                    <td>0.19%</td>
-                                </tr>
-                                <tr>
-                                    <td>Wiper</td>
-                                    <td>1</td>
-                                    <td>0.10%</td>
+                                    <td>5</td>
+                                    <td>0.29%</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -221,13 +184,13 @@
                             <tbody>
                                 <tr>
                                     <td>January</td>
-                                    <td>80</td>
-                                    <td>7.70%</td>
+                                    <td>70</td>
+                                    <td>3.99%</td>
                                 </tr>
                                 <tr>
                                     <td>February</td>
-                                    <td>133</td>
-                                    <td>12.80%</td>
+                                    <td>118</td>
+                                    <td>6.73%</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -248,13 +211,13 @@
                             <tbody>
                                 <tr>
                                     <td>Spring</td>
-                                    <td>300</td>
-                                    <td>28.87%</td>
+                                    <td>275</td>
+                                    <td>15.69%</td>
                                 </tr>
                                 <tr>
                                     <td>Summer</td>
-                                    <td>314</td>
-                                    <td>30.22%</td>
+                                    <td>1041</td>
+                                    <td>59.38%</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -276,23 +239,23 @@
                             <tbody>
                                 <tr>
                                     <td class="rating-slow">Slow</td>
-                                    <td>1-7</td>
+                                    <td>1-22</td>
                                 </tr>
                                 <tr>
                                     <td class="rating-fair">Fair</td>
-                                    <td>8-11</td>
+                                    <td>23-26</td>
                                 </tr>
                                 <tr>
                                     <td class="rating-average">Average</td>
-                                    <td>12</td>
+                                    <td>27</td>
                                 </tr>
                                 <tr>
                                     <td class="rating-good">Good</td>
-                                    <td>13-16</td>
+                                    <td>28-31</td>
                                 </tr>
                                 <tr>
                                     <td class="rating-hot">Hot</td>
-                                    <td>17+</td>
+                                    <td>32+</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -312,9 +275,9 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>90</td>
-                                    <td>1039</td>
-                                    <td>12</td>
+                                    <td>65</td>
+                                    <td>1753</td>
+                                    <td>27</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -323,18 +286,18 @@
                 <div class="columns is-flex is-justify-content-space-around is-flex-wrap-wrap image-columns">
                     <div class="column is-two-fifths image-column">
                         <figure class="image is-3by2 mb-5">
-                            <img src="../images/2018/graphs/total_fish_2018.PNG" alt="Bar graph of total fish caught for each lake in 2018">
+                            <img src="../images/2022/graphs/total_fish_2022.PNG" alt="Bar graph of total fish caught for each lake in 2022">
                         </figure>
                         <figure class="image is-3by2">
-                            <img src="../images/2018/graphs/total_month_2018.PNG" alt="Bar graph of totals for each month in 2018">
+                            <img src="../images/2022/graphs/total_month_2022.PNG" alt="Bar graph of totals for each month in 2022">
                         </figure>
                     </div>
                     <div class="column is-two-fifths image-column">
                         <figure class="image is-3by2 mb-5">
-                            <img src="../images/2018/graphs/total_species_2018.PNG" alt="Bar graph of totals for each species caught in 2018">
+                            <img src="../images/2022/graphs/total_species_2022.PNG" alt="Bar graph of totals for each species caught in 2022">
                         </figure>
                         <figure class="image is-3by2">
-                            <img src="../images/2018/graphs/total_season_2018.PNG" alt="Bar graph of totals for each season in 2022">
+                            <img src="../images/2022/graphs/total_season_2022.PNG" alt="Bar graph of totals for each season in 2022">
                         </figure>
                     </div>
                 </div>
@@ -342,45 +305,36 @@
         </section>
         <section class="section">
             <div class="container">
-                <h2 id="locations_2018" class="has-text-centered has-text-white mb-6">Select Location</h2>
+                <h2 id="locations_2022" class="has-text-centered has-text-white mb-6">Select Location</h2>
             </div>
             <div class="container location-select">
                 <div class="columns is-flex is-justify-content-center has-text-centered is-multiline">
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/adams.html">Adams</a>
+                        <a class="location-links button my-5" href="2022/adams.html">Adams</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/east_canyon.html">East Canyon</a>
+                        <a class="location-links button my-5" href="2022/good_ski.html">Good Ski</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/hobbs.html">Hobbs</a>
+                        <a class="location-links button my-5" href="2022/hobbs.html">Hobbs</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/holmes.html">Holmes</a>
+                        <a class="location-links button my-5" href="2022/holmes.html">Holmes</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/jensen.html">Jensen</a>
+                        <a class="location-links button my-5" href="2022/jensen.html">Jensen</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/kaysville.html">Kaysville</a>
+                        <a class="location-links button my-5" href="2022/kaysville.html">Kaysville</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/kens.html">Kens</a>
+                        <a class="location-links button my-5" href="2022/lost_creek.html">Lost Creek</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/lost_creek.html">Lost Creek</a>
+                        <a class="location-links button my-5" href="2022/stansbury.html">Stansbury</a>
                     </div>
                     <div class="column">
-                        <a class="location-links button my-5" href="2018/pinewview.html">Pineview</a>
-                    </div>
-                    <div class="column">
-                        <a class="location-links button my-5" href="2018/rockport.html">Rockport</a>
-                    </div>
-                    <div class="column">
-                        <a class="location-links button my-5" href="2018/strawberry.html">Strawberry</a>
-                    </div>
-                    <div class="column">
-                        <a class="location-links button my-5" href="2018/willard.html">Willard</a>
+                        <a class="location-links button my-5" href="2022/strawberry.html">Strawberry</a>
                     </div>
                 </div>
             </div>
