img errors fixed

--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
                     </div>
                 </div>
                 <div class="biggestFish">
-                    <img src="images/biggestFish/36in_muskie.JPG"
+                    <img src="images/biggestFish/36in_muskie.jpg"
                         alt="36 inch Tiger Muskie caught August 14, 2014 at Pineview Reservoir on a 4 inch swimbait">
                     <div class="biggest-fish-text mx-auto">
                         <p class="biggest-text has-text-white p-2">
